[package]
name = "zran-rs"
version = "0.0.1"
edition = "2021"
license = "Zlib"
repository = "https://github.com/cjgriscom/zran-rs"
homepage = "https://github.com/cjgriscom/zran-rs"
readme = "./README.md"
description = "Seekable zlib streams in pure Rust"
rust-version = "1.75"

[profile.dev]
opt-level = 1

[dependencies]
byteorder = "1.5"
zlib-rs = { git = "https://github.com/memorysafety/zlib-rs", rev="e56ccabf9ebe9d9bbc3d25e22b58403aae4a14ee"  }
libz-rs-sys = { git = "https://github.com/memorysafety/zlib-rs", rev="e56ccabf9ebe9d9bbc3d25e22b58403aae4a14ee"  }
